# containerize

./: .gitignore  Vagrantfile
db-sync/: Cargo.toml  Dockerfile
db-sync/migrations/00000000000000_diesel_initial_setup/: up.sql
db-sync/migrations/2021-10-03-120033_test_migration/: down.sql  up.sql
db-sync/src/: main.rs
nomad/: postgres-job
packer/: example.json  packer.json
packer/shared/scripts/: setup.sh
rust-image/: Dockerfile
terraform/: main.tf
terraform/aws/: packer.json
terraform/aws/env/us-east/: terraform.tfvars
terraform/aws/env/us-east/.terraform/modules/: modules.json
users-microservice/: .dockerignore  Cargo.toml  Dockerfile
users-microservice/src/: main.rs
